--- a/src/pages/PracticeTextList.page/styles.scss
+++ b/src/pages/PracticeTextList.page/styles.scss
@@ -160,6 +160,8 @@
             color: var(--weak-text-color);
             font-weight: 300;
             margin-bottom: auto;
+            text-indent: 1rem;
+            margin-top: 0.5rem;
 
             display: -webkit-box;
             -webkit-box-orient: vertical;
